# Climate-Intelligence-Copilot-Agentic-Earth-Observation-LLMs-

./: .env.example  .gitignore  DEVELOPMENT.md  README.md  example.py  main.py  pyproject.toml  requirements.txt
config/: settings.yaml
notebooks/: analysis.ipynb
src/: __init__.py
src/agents/: __init__.py  base.py  data_agent.py  policy_agent.py  reasoning_agent.py  satellite_agent.py
src/data/: __init__.py  sources.py
src/geospatial/: __init__.py  hyperspectral.py
src/training/: __init__.py  data_prep.py  satellite.py
src/utils/: __init__.py
